--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    
     <img
       id="logo"
       src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/so-logo.png"
@@ -59,4 +60,5 @@
       />
     </section>
   </body>
+  <script src="./script.js"></script>
 </html>
